Aggiunta scritta del sito in costruzione

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
-<head>
-<title>Lorenzo Marinsalda &#x1F355;</title>
+	<head>
+	<title>Lorenzo Marinsalda &#x1F355;</title>
+	</head>
 
-</head>
-<body>
-<h1>&#x1F355;</h1>
-
-
-</body>
+	<body style="text-align:center;">
+		<h1>Pizza &#x1F355;</h1>
+		<br>
+		<p>Testo a caso, blablabla</p>
+		<br>
+		<h3>Sito in costruzione!</h3>
+	</body>
 </html>
