Aggiunto anche il Sushi!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	</head>
 
 	<body style="text-align:center;">
-		<h1>Pizza &#x1F355;</h1>
+		<h1> &#x1F355; Pizza & Sushi &#x1F363;</h1>
 		<br>
 		<p>Testo a caso, blablabla</p>
 		<br>
