Inserimento bottoni e piccoli aggiustamenti
Inserito un bottone per tornare in cima alla pagina, aggiornato il .css per il bottone, creata una cartella per il javascript contenente il file con le funzioni per far funzionare il bottone.
Aggiornate le categorie di esercizi dentro cpp.html

--- a/cpp.html
+++ b/cpp.html
@@ -4,9 +4,11 @@
 	<meta http-equiv="content-type" content="text/html; charset=windows-1252">
 	<link rel="stylesheet" type="text/css" href="css/cpp.css">
 	<meta charset="utf-8">
+	<script type="text/javascript" src="js/funzioni.js"></script>
 </head>
 
 <body>
+
 	<h1> ESERCIZI C++ DIVISI PER CATEGORIA:</h1>
 	<div class="sommario">
 		<ul>
@@ -14,9 +16,9 @@
 			<li> <a href="#cap2"> Capitolo 2 - Array (vettori) </a></li>
 			<li> <a href="#cap3"> Capitolo 3 - Funzioni</a></li>
 			<li> <a href="#cap4"> Capitolo 4 - Array bidimensionali (Matrici) </a></li>
-			<li> <a href="#cap7"> Capitolo 5 - Struct </a></li>
+			<li> <a href="#cap5"> Capitolo 5 - Struct </a></li>
 			<li> <a href="#cap6"> Capitolo 6 - Stringhe </a></li>
-			<li> <a href="#cap5"> Capitolo 7 - Ordinamento e ricerca su vettori </a></li>
+			<li> <a href="#cap7"> Capitolo 7 - Ordinamento e ricerca su vettori </a></li>
 			<li> <a href="#cap8"> Capitolo 8 - File di testo </a></li>
 			<li> <a href="#cap9"> Capitolo 9 - Ricorsione </a></li>
 		</ul>
@@ -24,9 +26,10 @@
 
 
 	<div class="capitolo">
-		<h2 id="cap1"> Parte 1 - Operazioni di base (condizioni e cicli) </h2>
-		
-		<div class="esercizio">		<!--Esercizio con soluzione-->
+		<h2 id="cap1"> Capitolo 1 - Operazioni di base (condizioni e cicli) </h2>
+
+		<div class="esercizio">
+			<!--Esercizio con soluzione-->
 			<span class="numero">Es. 1</span>
 			<span class="titolo">Esercizio 1</span>
 			<div class="testo">
@@ -41,7 +44,8 @@
 			</div>
 		</div>
 
-		<div class="esercizio">		<!--Esercizio senza soluzione-->
+		<div class="esercizio">
+			<!--Esercizio senza soluzione-->
 			<span class="numero">Es. 2</span>
 			<span class="titolo">Area del cerchio</span>
 			<div class="testo">
@@ -52,7 +56,7 @@
 			</div>
 
 		</div>
-		
+
 		<div class="esercizio">
 			<span class="numero">Es. 3</span>
 			<span class="titolo">Valore assoluto</span>
@@ -72,15 +76,16 @@
 					}
 					
 				  </pre>
-			
+
 			</div>
 
 		</div>
 
 	</div>
-	<div class="capitolo">		<!--Esercizio con listati all'interno del testo-->
-		<h2 id="cap9"> Capitolo 2 - Operazioni di base (condizioni e cicli) </h2>
-		
+	<div class="capitolo">
+		<!--Esercizio con listati all'interno del testo-->
+		<h2 id="cap2"> Capitolo 2 - Array (vettori) </h2>
+
 		<div class="esercizio">
 			<span class="numero">Es. 1</span>
 			<span class="titolo">Fattoriale con definizione ricorsiva </span>
@@ -110,9 +115,245 @@
 
 	</div>
 
-		
+	<div class="capitolo">
+		<!--Esercizio con listati all'interno del testo-->
+		<h2 id="cap3"> Capitolo 3 - Funzioni </h2>
+
+		<div class="esercizio">
+			<span class="numero">Es. 1</span>
+			<span class="titolo">Fattoriale con definizione ricorsiva </span>
+
+			<div class="testo">
+				Il fattoriale di un numero intero positivo puo' essere definito ricorsivamente nel modo seguente:
+				<ul>
+					<li> Il fattoriale di 1 e' 1. </li>
+					<li> Per qualsiasi altro numero positivo N, il fattoriale di N e' il prodotto fra N e il
+						fattoriale del numero precedente. </li>
+				</ul>
+				In formule:
+				<ul>
+					<li> Se N=1, FAT(N) = 1 </li>
+					<li> Se N>1, FAT(N) = N*FAT(N-1) </li>
+				</ul>
+				Definisci una funzione ricorsiva che calcola il fattoriale di N usando il procedimento descritto.
+
+				<div class="console">
+					Simulazione della console
+				</div>
+
+
+			</div>
+		</div>
+
 
 	</div>
+
+	<div class="capitolo">
+		<!--Esercizio con listati all'interno del testo-->
+		<h2 id="cap4"> Capitolo 4 - Array bidimensionali (Matrici) </h2>
+
+		<div class="esercizio">
+			<span class="numero">Es. 1</span>
+			<span class="titolo">Fattoriale con definizione ricorsiva </span>
+
+			<div class="testo">
+				Il fattoriale di un numero intero positivo puo' essere definito ricorsivamente nel modo seguente:
+				<ul>
+					<li> Il fattoriale di 1 e' 1. </li>
+					<li> Per qualsiasi altro numero positivo N, il fattoriale di N e' il prodotto fra N e il
+						fattoriale del numero precedente. </li>
+				</ul>
+				In formule:
+				<ul>
+					<li> Se N=1, FAT(N) = 1 </li>
+					<li> Se N>1, FAT(N) = N*FAT(N-1) </li>
+				</ul>
+				Definisci una funzione ricorsiva che calcola il fattoriale di N usando il procedimento descritto.
+
+				<div class="console">
+					Simulazione della console
+				</div>
+
+
+			</div>
+		</div>
+
+
+	</div>
+
+	<div class="capitolo">
+		<!--Esercizio con listati all'interno del testo-->
+		<h2 id="cap5"> Capitolo 5 - Struct </h2>
+
+		<div class="esercizio">
+			<span class="numero">Es. 1</span>
+			<span class="titolo">Fattoriale con definizione ricorsiva </span>
+
+			<div class="testo">
+				Il fattoriale di un numero intero positivo puo' essere definito ricorsivamente nel modo seguente:
+				<ul>
+					<li> Il fattoriale di 1 e' 1. </li>
+					<li> Per qualsiasi altro numero positivo N, il fattoriale di N e' il prodotto fra N e il
+						fattoriale del numero precedente. </li>
+				</ul>
+				In formule:
+				<ul>
+					<li> Se N=1, FAT(N) = 1 </li>
+					<li> Se N>1, FAT(N) = N*FAT(N-1) </li>
+				</ul>
+				Definisci una funzione ricorsiva che calcola il fattoriale di N usando il procedimento descritto.
+
+				<div class="console">
+					Simulazione della console
+				</div>
+
+
+			</div>
+		</div>
+
+
+	</div>
+
+	<div class="capitolo">
+		<!--Esercizio con listati all'interno del testo-->
+		<h2 id="cap6"> Capitolo 6 - Stringhe </h2>
+
+		<div class="esercizio">
+			<span class="numero">Es. 1</span>
+			<span class="titolo">Fattoriale con definizione ricorsiva </span>
+
+			<div class="testo">
+				Il fattoriale di un numero intero positivo puo' essere definito ricorsivamente nel modo seguente:
+				<ul>
+					<li> Il fattoriale di 1 e' 1. </li>
+					<li> Per qualsiasi altro numero positivo N, il fattoriale di N e' il prodotto fra N e il
+						fattoriale del numero precedente. </li>
+				</ul>
+				In formule:
+				<ul>
+					<li> Se N=1, FAT(N) = 1 </li>
+					<li> Se N>1, FAT(N) = N*FAT(N-1) </li>
+				</ul>
+				Definisci una funzione ricorsiva che calcola il fattoriale di N usando il procedimento descritto.
+
+				<div class="console">
+					Simulazione della console
+				</div>
+
+
+			</div>
+		</div>
+
+
+	</div>
+
+	<div class="capitolo">
+		<!--Esercizio con listati all'interno del testo-->
+		<h2 id="cap7"> Capitolo 7 - Ordinamento e ricerca su vettori </h2>
+
+		<div class="esercizio">
+			<span class="numero">Es. 1</span>
+			<span class="titolo">Fattoriale con definizione ricorsiva </span>
+
+			<div class="testo">
+				Il fattoriale di un numero intero positivo puo' essere definito ricorsivamente nel modo seguente:
+				<ul>
+					<li> Il fattoriale di 1 e' 1. </li>
+					<li> Per qualsiasi altro numero positivo N, il fattoriale di N e' il prodotto fra N e il
+						fattoriale del numero precedente. </li>
+				</ul>
+				In formule:
+				<ul>
+					<li> Se N=1, FAT(N) = 1 </li>
+					<li> Se N>1, FAT(N) = N*FAT(N-1) </li>
+				</ul>
+				Definisci una funzione ricorsiva che calcola il fattoriale di N usando il procedimento descritto.
+
+				<div class="console">
+					Simulazione della console
+				</div>
+
+
+			</div>
+		</div>
+
+
+	</div>
+
+	<div class="capitolo">
+		<!--Esercizio con listati all'interno del testo-->
+		<h2 id="cap8"> Capitolo 8 - File di testo </h2>
+
+		<div class="esercizio">
+			<span class="numero">Es. 1</span>
+			<span class="titolo">Fattoriale con definizione ricorsiva </span>
+
+			<div class="testo">
+				Il fattoriale di un numero intero positivo puo' essere definito ricorsivamente nel modo seguente:
+				<ul>
+					<li> Il fattoriale di 1 e' 1. </li>
+					<li> Per qualsiasi altro numero positivo N, il fattoriale di N e' il prodotto fra N e il
+						fattoriale del numero precedente. </li>
+				</ul>
+				In formule:
+				<ul>
+					<li> Se N=1, FAT(N) = 1 </li>
+					<li> Se N>1, FAT(N) = N*FAT(N-1) </li>
+				</ul>
+				Definisci una funzione ricorsiva che calcola il fattoriale di N usando il procedimento descritto.
+
+				<div class="console">
+					Simulazione della console
+				</div>
+
+
+			</div>
+		</div>
+
+
+	</div>
+
+	<div class="capitolo">
+		<!--Esercizio con listati all'interno del testo-->
+		<h2 id="cap9"> Capitolo 9 - Ricorsione </h2>
+
+		<div class="esercizio">
+			<span class="numero">Es. 1</span>
+			<span class="titolo">Fattoriale con definizione ricorsiva </span>
+
+			<div class="testo">
+				Il fattoriale di un numero intero positivo puo' essere definito ricorsivamente nel modo seguente:
+				<ul>
+					<li> Il fattoriale di 1 e' 1. </li>
+					<li> Per qualsiasi altro numero positivo N, il fattoriale di N e' il prodotto fra N e il
+						fattoriale del numero precedente. </li>
+				</ul>
+				In formule:
+				<ul>
+					<li> Se N=1, FAT(N) = 1 </li>
+					<li> Se N>1, FAT(N) = N*FAT(N-1) </li>
+				</ul>
+				Definisci una funzione ricorsiva che calcola il fattoriale di N usando il procedimento descritto.
+
+				<div class="console">
+					Simulazione della console
+				</div>
+
+
+			</div>
+		</div>
+
+
+	</div>
+
+
+
+	</div>
+
+
+	<button onclick="topFunction()" id="bottoneTop" title="Torna in cima">Inizio</button>
+
+
 </body>
 
 </html>
