--- a/cpp.html
+++ b/cpp.html
@@ -16,7 +16,7 @@
 
 	<div id="spoiler">
 		<div>
-			<input type="button" value="Menu" class="bottoneSpoiler" onclick="funzioneSpoilerButton(this);" />
+			<input type="button" value="Menu" class="button" onclick="funzioneSpoilerButton(this);" />
 			<div id="show"
 				style="display: none; background-color:transparent; background-repeat:repeat; margin: 0px;border-style:solid;border-width:1px; padding: 4px; width:98%">
 
