--- a/cpp.html
+++ b/cpp.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+	<title>Esercizi C++</title>
 	<meta http-equiv="content-type" content="text/html; charset=windows-1252">
 	<link rel="stylesheet" type="text/css" href="css/cpp.css">
 	<meta charset="utf-8">
@@ -16,7 +17,7 @@
 
 	<div id="spoiler">
 		<div>
-			<input type="button" value="Menu" class="button" onclick="funzioneSpoilerButton(this);" />
+			<input type="button" value="Menu" class="bottoneMenu" onclick="funzioneSpoilerButton(this);" />
 			<div id="show"
 				style="display: none; background-color:transparent; background-repeat:repeat; margin: 0px;border-style:solid;border-width:1px; padding: 4px; width:98%">
 
